// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Quote /> Rendering should render correctly with all fields 1`] = `
<blockquote
  authorStyle={
    Object {
      "color": "blue",
    }
  }
  cite="https://blog.hubspot.com/sales/18-motivational-quotes-to-start-your-day-list"
  className="quote-wrap quote"
  contentStyle={
    Object {
      "color": "red",
    }
  }
  markStyle={
    Object {
      "font-size": "60px;",
    }
  }
  quoteStyle={Object {}}
>
  <div
    className="quote__mark quote"
  >
    "
  </div>
  <div
    className="quote__content quote"
  >
    <p>
      Be patient with yourself. Self-growth is tender.. it is holy ground. There is no greater investment. Be patient with yourself. Self-growth is tender.. it is holy ground. There is no greater investment.
    </p>
  </div>
  <footer
    className="quote__author quote"
  >
    <cite>
      My company
    </cite>
    <span>
      ,
       
    </span>
    <cite>
      Stephen Covey
    </cite>
  </footer>
</blockquote>
`;

exports[`<Quote /> Rendering should render correctly with no author 1`] = `
<blockquote
  authorStyle={Object {}}
  cite="https://blog.hubspot.com/sales/18-motivational-quotes-to-start-your-day-list"
  className="quote-wrap quote"
  contentStyle={Object {}}
  markStyle={
    Object {
      "font-size": "60px;",
    }
  }
  quoteStyle={Object {}}
>
  <div
    className="quote__mark quote"
  >
    "
  </div>
  <div
    className="quote__content quote"
  >
    <p>
      Be patient with yourself. Self-growth is tender.. it is holy ground. There is no greater investment. Be patient with yourself. Self-growth is tender.. it is holy ground. There is no greater investment.
    </p>
  </div>
  <footer
    className="quote__author quote"
  >
    <cite>
      My company
    </cite>
  </footer>
</blockquote>
`;

exports[`<Quote /> Rendering should render correctly with no company 1`] = `
<blockquote
  authorStyle={Object {}}
  cite="https://blog.hubspot.com/sales/18-motivational-quotes-to-start-your-day-list"
  className="quote-wrap quote"
  contentStyle={Object {}}
  markStyle={
    Object {
      "font-size": "60px;",
    }
  }
  quoteStyle={Object {}}
>
  <div
    className="quote__mark quote"
  >
    "
  </div>
  <div
    className="quote__content quote"
  >
    <p>
      Be patient with yourself. Self-growth istender.. it is holy ground. There is no greater investment. Be patient with yourself. Self-growth istender.. it is holy ground. There is no greater investment.
    </p>
  </div>
  <footer
    className="quote__author quote"
  >
    <cite>
      Stephen Covey
    </cite>
  </footer>
</blockquote>
`;
